--- a/arch/arm/boot/dts/rk3188-radxarock.dts
+++ b/arch/arm/boot/dts/rk3188-radxarock.dts
@@ -20,7 +20,18 @@
 	compatible = "radxa,rock", "rockchip,rk3188";
 
 	memory {
-		reg = <0x60000000 0x80000000>;
+		reg = <0x60000000 0x7f000000>;
+	};
+
+	framebuffer {
+		compatible = "simple-framebuffer";
+		reg = <0xdf000000 (1280 * 720 * 4)>;
+		width = <1280>;
+		height = <720>;
+		stride = <(1280 * 4)>;
+		format = "r8g8b8";
+		pinctrl-names = "default";
+//		pinctrl-0 = <&lcdc1_clk &lcdc1_rgb888 &hdmi_rst_n>;
 	};
 
 	gpio-keys {
@@ -43,21 +54,21 @@
 		compatible = "gpio-leds";
 
 		green {
-			label = "rock:green:user1";
+			label = "green";
 			gpios = <&gpio0 12 GPIO_ACTIVE_LOW>;
-			default-state = "off";
+			linux,default-trigger = "heartbeat";
 		};
 
 		blue {
-			label = "rock:blue:user2";
+			label = "blue";
 			gpios = <&gpio0 14 GPIO_ACTIVE_LOW>;
-			default-state = "off";
+			linux,default-trigger = "mmc0";
 		};
 
-		sleep {
-			label = "rock:red:power";
-			gpios = <&gpio0 15 0>;
-			default-state = "off";
+		red {
+			label = "red";
+			gpios = <&gpio0 15 GPIO_ACTIVE_HIGH>;
+			linux,default-trigger = "rc-feedback";
 		};
 	};
 
@@ -166,7 +177,7 @@
 			vdd_arm: REG3 {
 				regulator-name = "VDD_ARM";
 				regulator-min-microvolt = <875000>;
-				regulator-max-microvolt = <1350000>;
+				regulator-max-microvolt = <1300000>;
 				regulator-always-on;
 			};
 
@@ -235,6 +246,10 @@
 	};
 };
 
+&i2c2 {
+	status = "okay";
+};
+
 &mmc0 {
 	num-slots = <1>;
 	status = "okay";
@@ -261,6 +276,10 @@
 &pinctrl {
 	pcfg_output_low: pcfg-output-low {
 		output-low;
+	};
+
+	pcfg_output_high: pcfg-output-high {
+		output-high;
 	};
 
 	act8846 {
@@ -295,6 +314,54 @@
 			rockchip,pins = <2 31 RK_FUNC_GPIO &pcfg_pull_none>;
 		};
 	};
+
+	lcdc1 {
+		lcdc1_clk: lcdc1-clk {
+			rockchip,pins = <RK_GPIO2 24 RK_FUNC_1 &pcfg_pull_none>, /* lcd1_dclk  */
+					<RK_GPIO2 25 RK_FUNC_1 &pcfg_pull_none>, /* lcd1_den   */
+					<RK_GPIO2 26 RK_FUNC_1 &pcfg_pull_none>, /* lcd1_hsync */
+					<RK_GPIO2 27 RK_FUNC_1 &pcfg_pull_none>; /* lcd1_vsync */
+		};
+
+		lcdc1_rgb888: lcdc1-rgb888 {
+			rockchip,pins = <RK_GPIO2 0 RK_FUNC_1 &pcfg_pull_none>,  /*  D0 = B0 */
+					<RK_GPIO2 1 RK_FUNC_1 &pcfg_pull_none>,  /*  D1 = B1 */
+					<RK_GPIO2 2 RK_FUNC_1 &pcfg_pull_none>,  /*  D2 = B2 */
+					<RK_GPIO2 3 RK_FUNC_1 &pcfg_pull_none>,  /*  D3 = B3 */
+					<RK_GPIO2 4 RK_FUNC_1 &pcfg_pull_none>,  /*  D4 = B4 */
+					<RK_GPIO2 5 RK_FUNC_1 &pcfg_pull_none>,  /*  D5 = B5 */
+					<RK_GPIO2 6 RK_FUNC_1 &pcfg_pull_none>,  /*  D6 = B6 */
+					<RK_GPIO2 7 RK_FUNC_1 &pcfg_pull_none>,  /*  D7 = B7 */
+					<RK_GPIO2 8 RK_FUNC_1 &pcfg_pull_none>,  /*  D8 = G0 */
+					<RK_GPIO2 9 RK_FUNC_1 &pcfg_pull_none>,  /*  D9 = G1 */
+					<RK_GPIO2 10 RK_FUNC_1 &pcfg_pull_none>, /* D10 = G2 */
+					<RK_GPIO2 11 RK_FUNC_1 &pcfg_pull_none>, /* D11 = G3 */
+					<RK_GPIO2 12 RK_FUNC_1 &pcfg_pull_none>, /* D12 = G4 */
+					<RK_GPIO2 13 RK_FUNC_1 &pcfg_pull_none>, /* D13 = G5 */
+					<RK_GPIO2 14 RK_FUNC_1 &pcfg_pull_none>, /* D14 = G6 */
+					<RK_GPIO2 15 RK_FUNC_1 &pcfg_pull_none>, /* D15 = G7 */
+					<RK_GPIO2 16 RK_FUNC_1 &pcfg_pull_none>, /* D16 = R0 */
+					<RK_GPIO2 17 RK_FUNC_1 &pcfg_pull_none>, /* D17 = R1 */
+					<RK_GPIO2 18 RK_FUNC_1 &pcfg_pull_none>, /* D18 = R2 */
+					<RK_GPIO2 19 RK_FUNC_1 &pcfg_pull_none>, /* D19 = R3 */
+					<RK_GPIO2 20 RK_FUNC_1 &pcfg_pull_none>, /* D20 = R4 */
+					<RK_GPIO2 21 RK_FUNC_1 &pcfg_pull_none>, /* D21 = R5 */
+					<RK_GPIO2 22 RK_FUNC_1 &pcfg_pull_none>, /* D22 = R6 */
+					<RK_GPIO2 23 RK_FUNC_1 &pcfg_pull_none>; /* D23 = R7 */
+		};
+	};
+};
+
+&pwm1 {
+	status = "okay";
+};
+
+&pwm2 {
+	status = "okay";
+};
+
+&spi0 {
+	status = "okay";
 };
 
 &uart0 {
