--- a/drivers/video/Makefile
+++ b/drivers/video/Makefile
@@ -11,3 +11,7 @@ obj-$(CONFIG_VIDEOMODE_HELPERS) += display_timing.o videomode.o
 ifeq ($(CONFIG_OF),y)
 obj-$(CONFIG_VIDEOMODE_HELPERS) += of_display_timing.o of_videomode.o
 endif
+
+obj-$(CONFIG_FB_ROCKCHIP)		+= rockchip/
+obj-$(CONFIG_DRM_ROCKCHIP)		+= rockchip/
+
