--- a/arch/arm/configs/rockchip_defconfig
+++ b/arch/arm/configs/rockchip_defconfig
@@ -19,12 +19,17 @@ CONFIG_MODULE_UNLOAD=y
 CONFIG_PARTITION_ADVANCED=y
 # CONFIG_EFI_PARTITION is not set
 # CONFIG_IOSCHED_CFQ is not set
+CONFIG_ARCH_ROCKCHIP=y
 CONFIG_SMP=y
 CONFIG_PREEMPT_VOLUNTARY=y
 # CONFIG_COMPACTION is not set
 CONFIG_DEFAULT_MMAP_MIN_ADDR=32768
 CONFIG_CLEANCACHE=y
 CONFIG_FRONTSWAP=y
+# CONFIG_ATAGS is not set
+CONFIG_ZBOOT_ROM_TEXT=0x0
+CONFIG_ARM_APPENDED_DTB=y
+CONFIG_CMDLINE="console=tty0 console=ttyS2,115200 debug earlyprintk root=/dev/mmcblk0p1 rootwait rootfstype=ext4 rw splash"
 CONFIG_KEXEC=y
 CONFIG_CPU_FREQ=y
 CONFIG_CPU_FREQ_DEFAULT_GOV_CONSERVATIVE=y
@@ -55,6 +60,7 @@ CONFIG_BT_HIDP=y
 CONFIG_BT_HCIBTUSB=y
 CONFIG_BT_HCIUART=y
 CONFIG_BT_HCIUART_H4=y
+CONFIG_CFG80211=y
 CONFIG_CFG80211_WEXT=y
 CONFIG_RFKILL=y
 CONFIG_DEVTMPFS=y
@@ -81,11 +87,9 @@ CONFIG_NETDEVICES=y
 # CONFIG_NET_VENDOR_STMICRO is not set
 # CONFIG_NET_VENDOR_VIA is not set
 # CONFIG_NET_VENDOR_WIZNET is not set
+CONFIG_PHYLIB=y
 CONFIG_SMSC_PHY=y
-CONFIG_USB_USBNET=y
-CONFIG_USB_NET_DM9601=y
-CONFIG_USB_NET_SMSC95XX=y
-CONFIG_USB_HSO=y
+# CONFIG_USB_NET_DRIVERS is not set
 CONFIG_BRCMFMAC=y
 CONFIG_BRCM_TRACING=y
 CONFIG_BRCMDBG=y
@@ -110,7 +114,6 @@ CONFIG_I2C_CHARDEV=y
 CONFIG_I2C_MUX=y
 CONFIG_I2C_GPIO=y
 CONFIG_SPI=y
-CONFIG_GPIOLIB=y
 CONFIG_GPIO_SYSFS=y
 CONFIG_POWER_SUPPLY=y
 CONFIG_POWER_RESET=y
@@ -119,7 +122,6 @@ CONFIG_THERMAL=y
 CONFIG_THERMAL_GOV_USER_SPACE=y
 CONFIG_WATCHDOG=y
 CONFIG_SOFT_WATCHDOG=y
-CONFIG_MFD_SYSCON=y
 CONFIG_MFD_TPS65910=y
 CONFIG_REGULATOR=y
 CONFIG_REGULATOR_DEBUG=y
@@ -181,8 +183,6 @@ CONFIG_DMADEVICES=y
 CONFIG_DMADEVICES_DEBUG=y
 CONFIG_DMADEVICES_VDEBUG=y
 CONFIG_STAGING=y
-CONFIG_R8188EU=y
-CONFIG_R8723AU=y
 CONFIG_ASHMEM=y
 CONFIG_ANDROID_LOGGER=y
 CONFIG_ANDROID_TIMED_GPIO=y
@@ -192,12 +192,12 @@ CONFIG_SYNC=y
 CONFIG_SW_SYNC=y
 CONFIG_SW_SYNC_USER=y
 CONFIG_ION=y
+CONFIG_ION_ROCKCHIP=y
 # CONFIG_IOMMU_SUPPORT is not set
 CONFIG_IIO=y
 CONFIG_INV_MPU6050_IIO=y
 CONFIG_AK8975=y
 CONFIG_PWM=y
-CONFIG_RESET_CONTROLLER=y
 CONFIG_GENERIC_PHY=y
 CONFIG_ANDROID=y
 CONFIG_EXT4_FS=y
@@ -232,5 +232,8 @@ CONFIG_DEBUG_KERNEL=y
 # CONFIG_SCHED_DEBUG is not set
 CONFIG_TIMER_STATS=y
 # CONFIG_FTRACE is not set
+CONFIG_DEBUG_LL=y
+CONFIG_DEBUG_RK3X_UART2=y
+CONFIG_EARLY_PRINTK=y
 # CONFIG_CRYPTO_HW is not set
 CONFIG_CRC_ITU_T=m
